--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,11 @@
 .calendarBtn {position: relative; width: 100%; height: 100vh;}
-.calendarBtn > button {position: absolute; top: 0; width: 192px; height: 100%; cursor: pointer;}
+.calendarBtn > button {position: absolute; top: 0; width: 100px; height: 100%; cursor: none;}
 .calendarBtn > button:hover {background:rgba(0,0,0,0.2); transition: 0.4s;}
 .prevBtn {left: 0;}
 .nextBtn {right: 0;}
+
+.pointer {display: none; position: absolute; width: 62px; transform: translate(-50%,-50%); font-family: NotoKR_L; font-size: 30px; color: #fff;}
+ 
 
 
 
