--- a/src/component/week/week.module.css
+++ b/src/component/week/week.module.css
@@ -1,4 +1,4 @@
 .week {width: 100%; height: 14.285714%;}
-.weekly {float: left; width: 12.5%; height: 100%; border-bottom: 1px solid #999; border-right: 1px solid #999;}
-
+.weekly {float: left; width: 12.5%; height: 100%; border-bottom: 1px solid #999; border-right: 1px solid #999; cursor: pointer;}
+.weekly:hover {background:rgba(0,0,0,0.08); transition: .2s;}
 
