--- a/src/component/day/day.module.css
+++ b/src/component/day/day.module.css
@@ -1,5 +1,7 @@
-.day {font-family: QM; float: left; width: 12.5%; height: 100%; padding: 10px; border-bottom: 1px solid #999; border-right: 1px solid #999; cursor: pointer;}
-.on:hover {background: rgba(0,0,0,0.05); transition: 0.2s;}
-
+.day {position: relative; float: left; width: 12.5%; height: 100%; font-family: QM; padding: 10px; border-bottom: 1px solid #999; border-right: 1px solid #999; cursor: pointer;}
+.on:hover {background: rgba(0,0,0,0.02); transition: 0.2s;}
 .off {color: #aaa; cursor: default;}
 
+.list_box {position: absolute; top: 0; left: 0; width: 100%; height: 100%; padding: 10px 25px 0 35px;}
+.list {overflow: hidden; font-family: NotoKR_L; font-size: 15px; text-overflow: ellipsis; white-space: nowrap; margin-bottom: 5px;}
+.list_checked {text-decoration: line-through; color: #999;} 
