--- a/src/component/week/week.module.css
+++ b/src/component/week/week.module.css
@@ -1,4 +1,7 @@
 .week {width: 100%; height: 14.285714%;}
-.weekly {float: left; width: 12.5%; height: 100%; border-bottom: 1px solid #999; border-right: 1px solid #999; cursor: pointer;}
+.weekly {float: left; position: relative; width: 12.5%; height: 100%; border-bottom: 1px solid #999; border-right: 1px solid #999; cursor: pointer;}
 .weekly:hover {background:rgba(0,0,0,0.08); transition: .2s;}
 
+.list_box {position: absolute; top: 0; left: 0; width: 100%; height: 100%; padding: 20px;}
+.list {overflow: hidden; font-family: NotoKR_L; font-size: 15px; text-overflow: ellipsis; white-space: nowrap; margin-bottom: 5px;}
+.list_checked {text-decoration: line-through; color: #999;} 
