--- a/src/component/weeklynote/weeklynote.module.css
+++ b/src/component/weeklynote/weeklynote.module.css
@@ -6,13 +6,15 @@
 .currentWeek {position: absolute; top: 80px; left: 130px; font-family: NotoKR_L; font-size: 26px;}
 .currentWeek::after {content: ""; display: block; position: absolute; top: 60%; right: -30px; width: 23px; height: 1px; background: #000;}
 .weekly_list {width: 100%; height: 100%; border-top: 1px solid #999;}
-.list_item {float: left; position: relative; width: 50%; height: 25%; border-bottom: 1px solid #999; border-right: 1px solid #999;}
+.list_item {overflow: hidden; float: left; position: relative; width: 50%; height: 25%; border-bottom: 1px solid #999; border-right: 1px solid #999;}
 .item_day {display: block; position: absolute; top: 0; left: 0; width: 111px; height: 100%; border-right: 1px solid #999;}
 
-
 .checklist {padding-left: 111px; overflow: hidden;}
-.input_add {width: 100%; height: 40px; background: rgba(0, 0, 0, 0.1);}
+.input_add {position: relative; width: 100%; height: 42.1875px; background: rgba(0, 0, 0, 0.1);}
 .input_add:hover {background: rgba(0, 0, 0, 0.15); transition: .4s;}
+
+/* note_checklist */
+.note_container {width: 100%; height: 42.1875px; padding: 10px 25px;} 
 
 
 
